--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,283 @@
-html {
-  height: 100%;
+:root {
+  --primary-color: #34495E;
+  --secondary-color: #2E86C1; /* Royal Blue */
+  --accent-color: #F39C12;
+  --background-color: #ECF0F1;
+  --text-color: #2C3E50;
 }
+
 body {
-  height: 100%;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
-#root {
+
+.App {
+  text-align: center;
+}
+
+.App-header {
+  background-color: var(--primary-color);
+  padding: 20px;
+  color: white;
+}
+
+.App-main {
+  padding: 40px 20px; /* Added more padding to separate the content from the header */
+}
+
+.cta-button {
+  background-color: var(--secondary-color);
+  color: white;
+  border: none;
+  padding: 15px 30px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.cta-button:hover {
+  background-color: var(--accent-color);
+}
+
+.App-footer {
+  background-color: var(--primary-color);
+  color: white;
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.header {
+  background-color: var(--primary-color);
+  padding: 10px;
   display: flex;
-  height: 100%;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
+  align-items: center;
 }
-#page-content {
-  flex-grow: 2;
+
+.nav-link {
+  margin-right: 20px;
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  transition: color 0.3s;
+}
+
+.nav-link:hover {
+  color: var(--accent-color);
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.login-container {
+  background-color: #f9f9f9;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
+}
+
+.login-heading {
+  margin-bottom: 20px;
+  font-size: 24px;
+  text-align: center;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-label {
+  display: block;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.form-input {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.btn-submit {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.btn-submit:hover {
+  background-color: #0056b3;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.form-container {
+  background-color: #f9f9f9;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
+}
+
+.form-heading {
+  margin-bottom: 20px;
+  font-size: 24px;
+  text-align: center;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-label {
+  display: block;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.form-input {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.btn-submit {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.btn-submit:hover {
+  background-color: #0056b3;
+}
+
+
+
+
+
+.profile-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile-avatar {
+  text-align: center;
+  margin-top: 25px;
+}
+
+.profile-avatar img {
+  width: 80px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.profile-avatar h5 {
+  margin: 0;
+}
+
+.profile-avatar p {
+  margin: 5px 0;
+  color: #888;
+}
+
+.profile-avatar button {
+  background-color: transparent;
+  border: none;
+  color: #007bff;
+  cursor: pointer;
+}
+
+.profile-details {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.info-section, .social-media {
+  margin-bottom: 30px;
+}
+
+.info-section h6, .social-media h6 {
+  margin-top: 0;
+}
+
+.info-item {
+  margin-bottom: 10px;
+}
+
+.info-item h6 {
+  margin-top: 0;
+}
+
+.social-icons a {
+  color: #007bff;
+  text-decoration: none;
+  margin-right: 10px;
+}
+
+.social-icons a:last-child {
+  margin-right: 0;
+}
+
+@media (min-width: 768px) {
+  .profile-container {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .profile-avatar {
+    margin-right: 20px;
+  }
+
+  .profile-details {
+    text-align: left;
+  }
+
+  .info-section, .social-media {
+    text-align: left;
+  }
+
+  .info-item {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .info-item h6 {
+    flex: 0 0 30%;
+  }
+
+  .info-item p {
+    flex: 0 0 70%;
+  }
 }
